Change de structure from ansibles playbooks

--- a/files/templates/index.html
+++ b/files/templates/index.html
@@ -2,9 +2,10 @@
    <body>
       <div>
 <form action = "http://" method = "POST" id="form1">
-            <p> Name<input type = "text" name = "name" /></p>
-            <p>Favorite Color <input type = "text" name = "color" /></p>
-            <p>Animal 
+         <h1><p>Johnata Lima Challenge  Application</p></h1>
+            <p>Name: <input type = "text" name = "name" /></p>
+            <p>Favorite Color:  <input type = "text" name = "color" /></p>
+            <p>Animal:  
                <select name ="animal" form="form1" >
                   <option value="cat" name="cat">Cat</option>
                   <option value="dog" name="dog">Dog</option>
@@ -12,6 +13,8 @@
             </p>
             <input type = "submit" value = "submit" />
          </form>
+      </div>
+      <div>
          <table border = 1>
                   <tr>
                      <th>Name</th>
